--- a/package.json
+++ b/package.json
@@ -1,6 +1,7 @@
 {
 	"dependencies": {
-		"express": "^4.18.2"
+		"express": "^4.18.2",
+		"ws": "^8.16.0"
 	},
 	"devDependencies": {
 		"nodemon": "^3.0.3"
