--- a/package.json
+++ b/package.json
@@ -4,9 +4,10 @@
 		"express": "^4.18.2",
 		"mongo": "^0.1.0",
 		"mongod": "^2.0.0",
+		"mongodb": "^6.5.0",
 		"ws": "^8.16.0"
 	},
 	"devDependencies": {
-		"nodemon": "^3.0.3"
+		"nodemon": "^3.1.0"
 	}
 }
