--- a/package.json
+++ b/package.json
@@ -1,11 +1,12 @@
 {
 	"dependencies": {
 		"axios": "^1.6.8",
+		"crypto": "^1.0.1",
 		"express": "^4.18.2",
 		"mongo": "^0.1.0",
 		"mongod": "^2.0.0",
 		"mongodb": "^6.5.0",
-		"ws": "^8.16.0"
+		"ws": "^8.18.0"
 	},
 	"devDependencies": {
 		"nodemon": "^3.1.0"
